--- a/my-evoplay-project/src/components/Header/Header.scss
+++ b/my-evoplay-project/src/components/Header/Header.scss
@@ -61,6 +61,8 @@
       flex-direction: column;
 
       .description {
+        width: 100% !important;
+
         h1 {
           text-align: center;
           font-size: 28px !important;
@@ -72,9 +74,9 @@
         }
 
         .buttons {
-          padding: 70px;
-          margin-top: 0 !important;
+          margin-top: 70px !important;
           flex-direction: column;
+          width: 100%;
         }
       }
 
